[package]
name = "chateau"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
regress = "0.9.0"
dmfr = "0.1.0"
dmfr-folder-reader = {version = "0.1.1", git = "https://github.com/catenarytransit/dmfr-folder-reader"}
lazy_static = "1.4.0"
